--- a/css/user_registration.css
+++ b/css/user_registration.css
@@ -164,9 +164,12 @@ h2{
     height: 40px;
     font-weight:600;
     font-size: 16px;
+    color: white;
     background: #085D8C;
     border-radius: 10px;
     border-color: #085D8C;
+    border-block: none;
+    border-inline: none;
 }
 .modal-content{
     cursor: pointer;
