--- a/css/production_registration.css
+++ b/css/production_registration.css
@@ -88,7 +88,8 @@ h2{
 }
 
 .days input{
-    width: 70%;
+    width: 20%;
+    margin-right: 6px;
 }
 
 .fabrication-pay{
@@ -123,6 +124,18 @@ h2{
     height: 24px;
 }
 
+.unity{
+    display: flex;
+    background: #A8C8FF;
+    border-radius: 4px;
+    padding: 6px;
+}
+
+.unity input{
+    width: 20%;
+    margin-right: 6px;
+}
+
 .package{
     display: flex;
     background: #A8C8FF;
@@ -131,7 +144,8 @@ h2{
 }
 
 .package input{
-    width: 80%;
+    width: 20%;
+    margin-right: 6px;
 }
 
 .register{
@@ -141,7 +155,7 @@ h2{
 
 .register .btn-group{
     width: 30%;
-    padding: 60px 6px 12px 0px;
+    padding: 30px 0px 12px 0px;
 }
 
 #btn_cadastrar{
@@ -151,12 +165,12 @@ h2{
     background: #085D8C;
 }
 
-@media (max-width:900px){
-    .name-tipe-value{
-        flex-wrap: wrap;
+@media (max-width:940px){
+    .unity-package{
+        flex-direction: column;
     }
-    .name-tipe-value label{
-        width: 100%;
+    .time-date{
+        flex-direction: column;
     }
     .register{
         padding-right: 48px;
