--- a/css/product_management.css
+++ b/css/product_management.css
@@ -42,8 +42,8 @@ table button{
     width: 60px;
     padding: 0;
 }
-.visibility{
-    margin-left: 150px;
+#btnSee{
+    margin-left: 300px;
 }
 .edit{
     margin-left: 30px;
@@ -63,6 +63,7 @@ table button{
 .modal-header{
     background: #085D8C;
     color: #fff;
+    height: 50px;
 }
 .modal-header h5{
     font-size: 24px;
@@ -77,7 +78,13 @@ table button{
 .modal-body form{
     display: flex;
     flex-direction: column;
-    margin-top: -12px;
+    margin-top: 12px;
+}
+.modal-body form h3{
+    padding-top: 20px;
+    color: black;
+    font-weight: 400;
+    text-align: center;
 }
 .modal-body form input{
     width: 100%;
@@ -113,13 +120,14 @@ table button{
 }
 .save .btn-group{
     width: 30%;
-    padding-top: 66px;
+    padding-top: 30px;
 }
 #btn_salvar{
     height: 40px;
     font-weight:600;
     font-size: 16px;
     background: #085D8C;
+    border: none;
 }
 .alternative{
     display: flex;
@@ -133,6 +141,7 @@ table button{
     font-weight:600;
     font-size: 16px;
     background: #085D8C;
+    border: none;
 }
 .alternative .btn-secondary{
     width: 20%;
@@ -143,8 +152,8 @@ table button{
     border-color: #892015;
 }
 @media (min-width: 1040px) and (max-width: 1200px) {
-    .visibility{
-        margin-left: 50px;
+    #btnSee{
+        margin-left: 140px;
     }
     .edit{
         margin-left: 30px;
@@ -157,8 +166,8 @@ table button{
     }
 }
 @media (min-width: 950px) and (max-width: 1039px) {
-    .visibility{
-        margin-left: 0px;
+    #btnSee{
+        margin-left: 140px;
     }
     .edit{
         margin-left: 30px;
@@ -172,8 +181,8 @@ table button{
 }
 
 @media (min-width: 910px) and (max-width: 949px) {
-    .visibility{
-        margin-left: 0px;
+    #btnSee{
+        margin-left: 110px;
     }
     .edit{
         margin-left: 20px;
@@ -187,8 +196,8 @@ table button{
 }
 
 @media (min-width: 400px) and (max-width: 909px) {
-    .visibility{
-        margin-left: 0px;
+    #btnSee{
+        margin-left: 80px;
     }
     .edit{
         margin-left: 0px;
