--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -38,7 +38,7 @@ h2{
     margin: 18px;
     background: #a7c7ff3f;
     padding: 24px;
-    width: 70%;
+    width: 80%;
     border-radius: 4px;
     margin-left: 0;
 }
@@ -144,6 +144,12 @@ h2{
     display: flex;
 }
 
+.discount-general .total-general{
+    margin-left: 36px;
+    margin-top: 0;
+    width: 100%;
+}
+
 .discount-general label{
     width: 40%;
 }
@@ -158,7 +164,7 @@ h2{
 }
 
 .total-value{
-    margin-left: 48px;
+    margin-left: 60px;
 }
 
 .total-value span{
@@ -187,6 +193,13 @@ h2{
 }
 
 #btn_cadastrar{
+    height: 40px;
+    font-weight:600;
+    font-size: 16px;
+    background: #085D8C;
+}
+
+#btn_setinha{
     height: 40px;
     font-weight:600;
     font-size: 16px;
