--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -241,3 +241,29 @@ h2{
         width: 60%;
     }
 }
+.loader {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #085D8C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader > img {
+    width: 50px;
+}
+
+.loader.hidden {
+    animation: fadeOut 2s;
+    animation-fill-mode: forwards;
+}
+.thumb {
+    height: 100px;
+    border: 1px solid black;
+    margin: 10px;
+}
