--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -111,15 +111,13 @@ h2{
     display: flex;
     width: 60%;
 }
-
-.type{
-    margin-left: -14px;
-    margin-right: -14px;
+.product-type-quantity label{
+    width: 40%;
 }
-
-.type input{
-    border-radius: 0;
+.product-type-quantity select{
+    width: 100%;
 }
+ 
 
 .price-total{
     display: flex;
