--- a/css/settings_user.css
+++ b/css/settings_user.css
@@ -58,21 +58,34 @@ h2{
 .column-img-btn{
     width: 40%;
 }
-.img-user{
-    height: 50%;
+.img-user-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 215px;
     width: 100%;
+}
+.img-user-section img{
+    width: 100px;
+    border: 10px solid #085D8C;
+    border-radius: 50% ;
+}
+.img-user-section span{
+    padding: 15px;
+    font-size: 15px;
 }
 
 .register{
-    height: 50%;
-    width: 100%;
+    height: 215px;
     display: flex;
-    justify-content: end;
+    align-items: flex-end;
+    justify-content: center;
 }
 
-.register .btn-group{
-    width: 30%;
-    padding: 80px 6px 12px 0px;
+.btn-group{
+    width: 60%;
+    padding: 0px 0px 20px 20px;
 }
 
 #btn_cadastrar{
