--- a/css/settings_user.css
+++ b/css/settings_user.css
@@ -88,7 +88,7 @@ h2{
     padding: 0px 0px 20px 20px;
 }
 
-#btn_cadastrar{
+#btn_salvar{
     height: 40px;
     font-weight:600;
     font-size: 16px;
