--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -206,7 +206,7 @@ h2{
     background: #085D8C;
 }
 
-#btn_setinha{
+#btn_setinha, #btn_setinha_2{
     height: 40px;
     font-weight:600;
     font-size: 16px;
