--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,12 @@ body {
     background-image: url(../images/background-\ sys\ unity3.png);
     background-size: 100%;
 }
-
+#alertalogin{
+    font-size: 10px;
+}
+#alertausuario{
+    font-size: 10px;
+}
 .container{
     display: flex;
     flex-direction: column;
