--- a/css/product_registration.css
+++ b/css/product_registration.css
@@ -83,6 +83,26 @@ h2{
     width: 100%;
 }
 
+.name select{
+    display: flex;
+    align-items: center;
+    background: none;
+    border-color: #085D8C;
+    border-radius: 4px;
+    font-size: 15px;
+    height: 32px;
+}
+
+.name option{
+    background: #7AA5BC;
+    color: #fff;
+    font-size: 13px;
+}
+
+.name select{
+    transition-delay: 250ms;
+}
+
 .name-tipe-value .tipe{
     display: flex;
     flex: 3;
