--- a/css/product_registration.css
+++ b/css/product_registration.css
@@ -20,14 +20,14 @@ h2{
     display: flex;
     flex-direction: column;
     margin: 18px;
-    background: #a7c7ff3f;
+    background: #f5f5f5;
     padding: 24px;
-    width: 80%;
+    width: 90%;
     border-radius: 4px;
 }
 .product{
     font-size: 25px;
-    font-weight: 300;
+    font-weight: 500;
     margin-bottom: 20px;
 }
 .produto-tipo{
@@ -94,8 +94,8 @@ h2{
 }
 
 .name option{
-    background: #7AA5BC;
-    color: #fff;
+    background: #fff;
+    color:#000;
     font-size: 13px;
 }
 
