--- a/css/sale_registration.css
+++ b/css/sale_registration.css
@@ -36,7 +36,7 @@ h2{
     display: flex;
     flex-direction: column;
     margin: 18px;
-    background: #a7c7ff3f;
+    background: #f5f5f5;
     padding: 24px;
     width: 80%;
     border-radius: 4px;
@@ -129,8 +129,8 @@ h2{
 }
 
 .product-type-quantity option{
-    background: #7AA5BC;
-    color: #fff;
+    background: #fff;
+    color:#000;
     font-size: 13px;
 }
 
