--- a/css/settings_user.css
+++ b/css/settings_user.css
@@ -23,7 +23,7 @@ h2{
     align-items:flex-start;
     width: 90%;
     height: 430px;
-    background: #a7c7ff3f;
+    background: #f5f5f5;
     padding: 0px 30px 0px 30px;
 }
 
