troca de cor de background

--- a/css/prop.css
+++ b/css/prop.css
@@ -12,7 +12,7 @@
 }
 
 .suporte2{
-    background-color: #bcd4ff;
+    background-color: #f5f5f5;
     width: 1030px;
     height: 230px;
     margin-left: 30px;
