--- a/css/home.css
+++ b/css/home.css
@@ -196,6 +196,10 @@ h3{
     align-items: center;
 }
 
+.sidebar li:hover{
+    background-color: #085D8C;
+}
+
 .btn-toggle {
     display: flex;
     flex-direction: row-reverse;
