--- a/css/user_management.css
+++ b/css/user_management.css
@@ -243,7 +243,8 @@ table button{
 
 /* TENTATIVA DO MODAL */
 .mod{
-    background-color: #ABD2CE;
+    margin-top: -48px;
+    background-color: #fff;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -253,16 +254,17 @@ table button{
 }
   
 .container{
-    width: 100vw;
-    height: 100vh;
+    height: 100%;
     background: rgba(0,0,0,.5);
-    position: fixed;
-    top: 0px;
-    left: 0px;
+    position:fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: 2000;
     display: none;
     justify-content: center;
     align-items: center;
+    margin: 0;
 }
 
 .container.mostrar {
@@ -284,10 +286,57 @@ table button{
     animation: modal .3s;
 }
 
+.top-modal{
+    display: flex;
+    padding: 18px;
+    background-color: #085D8C;
+}
+
+.top-modal h5{
+    color:#fff;
+    font-weight: 700;
+}
+
 .fechar{
-    margin-left: 530px;
-    background-color: crimson;
-    color: #fff;
+    margin-left: 400px;
+    background: none;
+    border: none;
+}
+
+.fechar::before{
+    content: url(../images/close_white_24dp.svg);
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 18px;
+}
+form label {
+    font-weight: 600;
+    font-size: 16px;
+    padding: 6px;
+    margin-bottom: 0;
+    color: black;
+}
+form input {
+    border-radius: 4px;
+    border-width: 1px;
+    height: 32px;
+    border-style: solid;
+    border-color: #085D8C;
+    width: 100%;
+}
+.mod .user-email label{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+}
+.mod .office-access label {
+    align-items: flex-start;
+}
+.mod .office-access select {
+    width: 100%;
 }
 
 .button{
