--- a/css/user_management.css
+++ b/css/user_management.css
@@ -251,8 +251,21 @@ table button{
     align-content: center;
     align-items: center;
 }
-  
-.container{
+
+.loader2 {
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+/* .container {
     width: 100vw;
     height: 100vh;
     background: rgba(0,0,0,.5);
@@ -263,9 +276,9 @@ table button{
     display: none;
     justify-content: center;
     align-items: center;
-}
+} */
 
-.container.mostrar {
+.loader2.mostrar {
     display: flex;
 }
 
